Made the logger log files (Java)